[gd_scene load_steps=3 format=2]

[ext_resource path="res://START_menu.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "title_bg_anim"
length = 12.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 6, 9, 12 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.156863, 0, 0, 1 ), Color( 0, 0.0588235, 0, 1 ), Color( 0.117647, 0.00392157, 0.117647, 1 ), Color( 0, 0, 0.156863, 1 ), Color( 0.156863, 0, 0, 1 ) ]
}

[node name="START_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CL" type="CanvasLayer" parent="."]

[node name="FadePanel" type="ColorRect" parent="CL"]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 25.7725, 15.2314 )
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="bg" type="ColorRect" parent="."]
margin_left = -14.7063
margin_top = -11.5369
margin_right = 25.2937
margin_bottom = 28.4631
rect_scale = Vector2( 26.2734, 15.4837 )
color = Color( 0.073638, 0.0244591, 0.073638, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bganim" type="AnimationPlayer" parent="bg"]
method_call_mode = 1
anims/title_bg_anim = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="cpuWhite1" type="CPUParticles2D" parent="."]
position = Vector2( 1108.75, 301.16 )
rotation = -3.14159
amount = 124
lifetime = 9.0
preprocess = 5.0
emission_shape = 2
emission_rect_extents = Vector2( 1, 300 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.2
scale_amount_random = 0.2

[node name="cpuWhite2" type="CPUParticles2D" parent="."]
position = Vector2( 1108.75, 301.16 )
rotation = -3.14159
amount = 32
lifetime = 16.0
preprocess = 5.0
emission_shape = 2
emission_rect_extents = Vector2( 1, 300 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.2
scale_amount = 2.5
scale_amount_random = 0.2

[node name="cpuWhite3" type="CPUParticles2D" parent="."]
position = Vector2( 1048.81, 302.658 )
rotation = -3.14159
amount = 32
lifetime = 6.0
preprocess = 5.0
emission_shape = 2
emission_rect_extents = Vector2( 1, 300 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 250.0
initial_velocity_random = 0.2
scale_amount = 3.0
scale_amount_random = 0.2

[node name="cpuPink" type="CPUParticles2D" parent="."]
position = Vector2( 1108.75, 301.16 )
rotation = -3.14159
amount = 4
lifetime = 12.0
preprocess = 5.0
randomness = 0.29
emission_shape = 2
emission_rect_extents = Vector2( 1, 300 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.5
scale_amount = 3.0
scale_amount_random = 1.0
color = Color( 1, 0.27451, 0.921569, 1 )

[node name="cpuBlue" type="CPUParticles2D" parent="."]
position = Vector2( 1108.75, 301.16 )
rotation = -3.14159
amount = 4
lifetime = 12.0
preprocess = 5.0
randomness = 0.29
emission_shape = 2
emission_rect_extents = Vector2( 1, 300 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.5
scale_amount = 3.0
scale_amount_random = 1.0
color = Color( 0.27451, 0.439216, 1, 1 )

[node name="cpuGreen" type="CPUParticles2D" parent="."]
position = Vector2( 1108.75, 301.16 )
rotation = -3.14159
amount = 4
lifetime = 12.0
preprocess = 5.0
randomness = 0.29
emission_shape = 2
emission_rect_extents = Vector2( 1, 300 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.5
scale_amount = 3.0
scale_amount_random = 1.0
color = Color( 0.219608, 0.803922, 0.227451, 1 )

[node name="cpuRed" type="CPUParticles2D" parent="."]
position = Vector2( 1108.75, 301.16 )
rotation = -3.14159
amount = 4
lifetime = 12.0
preprocess = 5.0
randomness = 0.29
emission_shape = 2
emission_rect_extents = Vector2( 1, 300 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.5
scale_amount = 3.0
scale_amount_random = 1.0
color = Color( 0.94902, 0.239216, 0.168627, 1 )

[node name="cpuYellow" type="CPUParticles2D" parent="."]
position = Vector2( 1108.75, 301.16 )
rotation = -3.14159
amount = 4
lifetime = 12.0
preprocess = 5.0
randomness = 0.29
emission_shape = 2
emission_rect_extents = Vector2( 1, 300 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
initial_velocity_random = 0.5
scale_amount = 3.0
scale_amount_random = 1.0
color = Color( 0.956863, 0.898039, 0.419608, 1 )

[node name="start" type="Button" parent="."]
margin_left = 29.7301
margin_top = 343.681
margin_right = 79.7301
margin_bottom = 363.681
rect_scale = Vector2( 2.66511, 2.32611 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="."]
margin_left = 33.2977
margin_top = 516.116
margin_right = 78.2977
margin_bottom = 536.116
rect_scale = Vector2( 2.66511, 2.32611 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host" type="Button" parent="."]
margin_left = 858.608
margin_top = 356.762
margin_right = 905.608
margin_bottom = 376.762
rect_scale = Vector2( 2.66511, 2.32611 )
text = "HOST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" type="Button" parent="."]
margin_left = 859.797
margin_top = 435.25
margin_right = 904.797
margin_bottom = 455.25
rect_scale = Vector2( 2.66511, 2.32611 )
text = "JOIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 20.2165
margin_top = 24.9733
margin_right = 120.217
margin_bottom = 38.9733
rect_scale = Vector2( 4.87136, 13.158 )
text = "OK BUDDY GUY"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="button_up" from="start" to="." method="_on_start_button_up"]
[connection signal="button_up" from="quit" to="." method="_on_quit_button_up"]
[connection signal="button_up" from="host" to="." method="_on_host_button_up"]
[connection signal="button_up" from="join" to="." method="_on_join_button_up"]
